Now accepting user input

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
     <h1>Welcome to Simon!!</h1>
     <button id="playButton">Play Game?</button>
-    <button class="red"></button>
-    <button class="yellow"></button>
+    <button id="red" class="red"></button>
+    <button id="yellow" class="yellow"></button>
     <button id="blue" class="blue"></button>
-    <button class="green"></button>
+    <button id="green" class="green"></button>
 </body>
 <script src="script.js"></script>
 </html>
