Now checks answers for correctness

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <h1>Welcome to Simon!!</h1>
+    <h3>Round: </h3>
+    <input id="roundNumber"></input>
     <button id="playButton">Play Game?</button>
+    <button id="submitButton">Submit Answer</button>
     <button id="red" class="red"></button>
     <button id="yellow" class="yellow"></button>
     <button id="blue" class="blue"></button>
