Now displays the current round correctly

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Welcome to Simon!!</h1>
     <h3>Round: </h3>
-    <input id="roundNumber"></input>
+    <textarea rows="1" cols="3" id="roundNumber"></textarea>
     <button id="playButton">Play Game?</button>
     <button id="submitButton">Submit Answer</button>
     <button id="red" class="red"></button>
