--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
 <body>
+    <div class="wrapper">
     <h1>Welcome to Simon!!</h1>
     <h3>Round: </h3>
     <textarea rows="1" cols="3" id="roundNumber"></textarea>
@@ -17,6 +18,7 @@
     <button id="yellow" class="yellow"></button>
     <button id="blue" class="blue"></button>
     <button id="green" class="green"></button>
+    </div>
 </body>
 <script src="script.js"></script>
 </html>
