Attempts at lighting up buttons

--- a/index.html
+++ b/index.html
@@ -6,11 +6,41 @@
     <title>Welcome to Simon!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+    <!--
+    <style>
+            @-webkit-keyframes redBlink {
+              0%   { background-color: #fff; }
+              49% { background-color: #fff; }
+              50% { background-color: #ff0000; }
+              99% { background-color: #ff000f; }
+              100% { background-color: #fff; }
+            }
+            @-moz-keyframes redBlink {
+              0%   { background-color: #fff; }
+              49% { background-color: #fff; }
+              50% { background-color: #ff0000; }
+              99% { background-color: #ff0000; }
+              100% { background-color: #fff; }
+            }
+            @keyframes redBlink {
+              0%   { background-color: #fff; }
+              49% { background-color: #fff; }
+              50% { background-color: #ff0000; }
+              99% { background-color: #ff0000; }
+              100% { background-color: #fff; }
+            }
+            #red {
+            -webkit-animation: redBlink 1s ;
+            -moz-animation:    redBlink 1s ;
+            animation:         redBlink 1s ;
+          }
+          </style>
+        -->
 </head>
 <body>
     <div class="wrapper">
     <h1>Welcome to Simon!!</h1>
-    <h3>Round: </h3>
+    <h2>Round: </h2>
     <textarea rows="1" cols="3" id="roundNumber"></textarea>
     <button id="playButton">Play Game?</button>
     <button id="submitButton">Submit Answer</button>
